made the RAG mode working
